# kotoleaf

./: DESIGN.md  README.md  REVIEW.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  main.py
backend/app/db/: firestore.py  sessions.py  users.py  vocab.py
backend/app/ear/: audio_buffer.py  deepgram_client.py  transcript_buffer.py
backend/app/mind/: clarification.py  context.py  summarizer.py  trigger.py
backend/app/models/: session.py  summary.py  transcript.py  vocab.py
backend/app/routes/: auth.py  sessions.py  settings.py
backend/app/tongue/: formatter.py  kanji_assist.py
backend/app/ws/: session_handler.py
backend/data/: jlpt_kanji.json
backend/tests/: test_audio_buffer.py  test_formatter.py  test_trigger.py
frontend/: Dockerfile  package-lock.json
frontend/src/: app.css  app.html
frontend/src/lib/audio/: capture.ts  microphone.ts  screen-share.ts
frontend/src/lib/components/: ConnectionStatus.svelte  KanjiAssist.svelte  Landscape.svelte  PortraitShared.svelte  PortraitSolo.svelte  RatingPrompt.svelte  SessionControls.svelte  SpeakerList.svelte  SummaryLine.svelte
frontend/src/lib/stores/: auth.svelte.ts  session.svelte.ts  settings.svelte.ts
frontend/src/lib/utils/: api.ts  bracket-parser.ts  color-palette.ts
frontend/src/lib/ws/: client.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/auth/callback/: +page.svelte
frontend/src/routes/auth/login/: +page.svelte
frontend/src/routes/session/[id]/: +page.svelte
(+1 files in other folders)
